--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,45 +2,30 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-orbs:
-  docker: circleci/docker@2.0.1
-  github-cli: circleci/github-cli@2.0.0
-
 # Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-
-  build_image_and_deploy:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: cimg/base:stable
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/base
+      - image: cimg/base:current
+
     # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
-      - setup_remote_docker:
-          version: 20.10.11
+      # Checkout the code as the first step.
       - checkout
       - run:
-          name: "Build docker image and push to Quay"
-          command: |
-            docker login -u="${QUAY_USER}" -p="${QUAY_PASSWORD}" quay.io
-            image_tag=quay.io/astronomer/astro-trial-examples:astro-$(date +%Y%m%d%H%M%S)
-            docker build -t ${image_tag} .
-            docker push ${image_tag}
-            curl -sSL install.astronomer.io | sudo bash -s
-            astro deploy -i ${image_tag} ${ASTRO_DEPLOYMENT_ID} -f
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-
-
-# Invoke jobs with workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  version: 2.1
-  build-and-deploy:
+  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - build_image_and_deploy:
-          context:
-             - astro-example-dags
-          filters:
-            branches:
-              only:
-                - main
+      - say-hello
